# llm-smart-formatting-benchmark

./: .env.baseline.example  .gitignore  BENCHMARK_RESULTS_2026-05-02.md  CLAUDE.md  GUIDELINE.md  PROMPT_GUIDE.md  README.md  docker-compose.baseline.yml  impeller_stem_adversarial_data.csv  messy_prompts.txt  models_metadata.csv  pyproject.toml  synthetic_data.csv
competitor-formatting/: README.md  competitor_stt.html  manifest.csv  score.py  synthesize.py  transcribe.py
competitor-formatting/responses/: azure.csv  azure.scored.csv  deepgram.csv  deepgram.scored.csv  elevenlabs.csv  elevenlabs.scored.csv  google.csv  google.scored.csv  openai.csv  openai.scored.csv  soniox.csv  soniox.scored.csv
docker/baseline/: impeller.toml  stem.toml
evaluator/: __init__.py  aggregate.py  judge.py  main.py  prompts.py  report.py  scorers.py
finetune/: __init__.py  augment.py  augment_v2.py  augment_v4.py  augment_v5.py  dataset.py  infer.py  main.py  mercury_2.html  prompts.py  restart_and_eval.py  run_mercury.py  score_mercury.py  together_ai.html  together_ai_v3.html  together_ai_v3.md  together_client.py
finetune/data/: eval.csv  eval.jsonl  synthetic_augmented.csv  synthetic_augmented_v2.csv  synthetic_augmented_v3.csv  synthetic_augmented_v4.csv  synthetic_augmented_v5.csv  train.jsonl  upload.json
iterate/: dataset.py  main.py
results/: benchmark_dimensions.csv
runner/: __init__.py  anthropic_client.py  baseline.py  chained.py  checkpoint.py  google_client.py  main.py  models.py  openai_client.py  openrouter.py  prompts.py  runner.py
(+621 files in other folders)
